i have done animation , z-index, linier gradince, position

--- a/HTML/news.html
+++ b/HTML/news.html
@@ -17,7 +17,8 @@
       min-height: 100%;
       max-width: 100%;
       line-height: 1.4;
-      padding: 20px 40px;
+      padding: 20px 50px;
+      background-color: bisque;
     }
     .container {
       max-width: 1200px;
@@ -117,7 +118,7 @@
         <div class="home">
           <div class="left">
             <img
-              src="./HTML/images/newspaper img.png"
+              src="../HTML/images/newspaper img.png"
               class="home-img"
               alt="picture"
             />
@@ -133,7 +134,7 @@
             <h3 class="heading-3">Latest news</h3>
 
             <div class="list">
-              <img src="./HTML/images/a.p.j kalam.webp" alt="picture-1" />
+              <img src="../HTML/images/a.p.j kalam.webp" alt="picture-1" />
               <p>
                 He started his career by designing a small hovercraft, but
                 remained unconvinced by his choice of a job at DRDO.
@@ -141,15 +142,7 @@
             </div>
 
             <div class="list">
-              <img src="./HTML/images/Goldenbride.jpg" alt="picture-2" />
-              <p>
-                He started his career by designing a small hovercraft, but
-                remained unconvinced by his choice of a job at DRDO.
-              </p>
-            </div>
-
-            <div class="list">
-              <img src="./HTML/images/newspaper img.png" alt="picture-3" />
+              <img src="../HTML/images/Goldenbride.jpg" alt="picture-2" />
               <p>
                 He started his career by designing a small hovercraft, but
                 remained unconvinced by his choice of a job at DRDO.
@@ -158,9 +151,17 @@
 
             <div class="list">
               <img
-                src="./HTML/images/macarons-2548818_1920.jpg"
-                alt="picture-4"
+                src="../HTML/images/macarons-2548818_1920.jpg"
+                alt="picture-3"
               />
+              <p>
+                He started his career by designing a small hovercraft, but
+                remained unconvinced by his choice of a job at DRDO.
+              </p>
+            </div>
+
+            <div class="list">
+              <img src="../HTML/images/bike.jpg" alt="picture-4" />
               <p>
                 He started his career by designing a small hovercraft, but
                 remained unconvinced by his choice of a job at DRDO.
